--- a/lab2app/app/src/main/res/layout-land/activity_main.xml
+++ b/lab2app/app/src/main/res/layout-land/activity_main.xml
@@ -6,17 +6,27 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="28dp"
+        android:text="Button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/tvQuestion"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="280dp"
+        android:layout_marginTop="160dp"
         android:layout_marginEnd="8dp"
         android:gravity="center"
         android:text="Салам Алейкум"
         app:layout_constraintEnd_toStartOf="@+id/imageButtonNext"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imageButtonPrev"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText" />
@@ -48,7 +58,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
-        android:layout_marginBottom="152dp"
+        android:layout_marginBottom="96dp"
         android:backgroundTint="#076300"
         android:text="Верный"
         app:layout_constraintBottom_toBottomOf="parent"
