--- a/lab1app/app/src/main/res/values/styles.xml
+++ b/lab1app/app/src/main/res/values/styles.xml
@@ -4,6 +4,9 @@
     <style name="ButtonStyle">
         <item name="cornerRadius">0dp</item>
         <item name="android:textSize">20sp</item>
+        <item name="android:layout_marginBottom">-6dp</item>
+        <item name="android:layout_margin">1dp</item>
+        <item name="android:textColor">@color/white</item>
         <item name="backgroundTint">@color/material_dynamic_neutral30</item>
     </style>
 </resources>
