--- a/lab3app/app/src/main/res/layout/element_university_list.xml
+++ b/lab3app/app/src/main/res/layout/element_university_list.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/clUniversityElement"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:clickable="true">
 
     <TextView
         android:id="@+id/tvUniversityName"
