--- a/lab3app/app/src/main/res/layout/dialog_university_edit.xml
+++ b/lab3app/app/src/main/res/layout/dialog_university_edit.xml
@@ -32,11 +32,11 @@
         android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="text"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintStart_toStartOf="@+id/tvCity"
+        app:layout_constraintTop_toBottomOf="@+id/tvCity" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tvCity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
