--- a/lab3app/app/src/main/res/layout/element_student_list.xml
+++ b/lab3app/app/src/main/res/layout/element_student_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/dStudent"
+    android:id="@+id/clStudent"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -15,17 +15,17 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tvName"
+        android:id="@+id/tvStudentName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/linearLayout7"
+        app:layout_constraintEnd_toStartOf="@+id/llStudentButtons"
         app:layout_constraintStart_toEndOf="@+id/ibCall"
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
-        android:id="@+id/linearLayout7"
+        android:id="@+id/llStudentButtons"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -35,14 +35,14 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
-            android:id="@+id/ibEditBtn"
+            android:id="@+id/ibEditStudent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:src="@android:drawable/ic_menu_edit" />
 
         <ImageButton
-            android:id="@+id/ibDeleteBtn"
+            android:id="@+id/ibDeleteStudent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
