--- a/lab3app/app/src/main/res/layout/fragment_groups.xml
+++ b/lab3app/app/src/main/res/layout/fragment_groups.xml
@@ -8,7 +8,7 @@
     tools:context=".fragments.GroupsFragment">
 
     <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tGroups"
+        android:id="@+id/tlGroups"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,7 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tGroups"
+        app:layout_constraintTop_toBottomOf="@+id/tlGroups"
         app:layout_constraintVertical_bias="1.0"
         tools:layout_editor_absoluteX="0dp" />
 
