--- a/lab3app/app/src/main/res/layout/fragment_student.xml
+++ b/lab3app/app/src/main/res/layout/fragment_student.xml
@@ -174,18 +174,18 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout6">
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btnCancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Button" />
+            android:text="Отменить" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/btnSave"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Button" />
+            android:text="Сохранить" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
