--- a/lab3app/app/src/main/res/layout/fragment_student.xml
+++ b/lab3app/app/src/main/res/layout/fragment_student.xml
@@ -166,9 +166,10 @@
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="109dp"
+        android:layout_height="wrap_content"
         android:gravity="bottom"
         android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout6">
