--- a/IndProj/app/src/main/res/menu/main_menu.xml
+++ b/IndProj/app/src/main/res/menu/main_menu.xml
@@ -1,4 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/miNewCategory"
+        android:icon="@android:drawable/ic_input_add"
+        android:title="Добавить категорию" />
+    <item
+        android:id="@+id/miUpdateCategory"
+        android:title="Изменить категорию" />
+    <item
+        android:id="@+id/miDeleteCategory"
+        android:title="Удалить категорию" />
+
+
 </menu>
