--- a/IndProj/app/src/main/res/values/themes.xml
+++ b/IndProj/app/src/main/res/values/themes.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Base application theme. -->
+    <style name="Base.Theme.IndProj" parent="Theme.Material3.Light">
+        <!-- Customize your light theme here. -->
+        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    </style>
 
-    <style name="Theme.IndProj" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.IndProj" parent="Base.Theme.IndProj" />
 </resources>
